--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "predis/predis": "^1.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
@@ -38,6 +39,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/Util/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         },
