--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -12,6 +12,7 @@ disable_functions =
 disable_classes =
 zend.enable_gc = On
 expose_php = On
+date.timezone = America/Argentina/Buenos_Aires
 max_execution_time = 30
 max_input_time = 60
 memory_limit = 128M
@@ -28,7 +29,7 @@ variables_order = "GPCS"
 request_order = "GP"
 register_argc_argv = Off
 auto_globals_jit = On
-post_max_size = 8M
+post_max_size = 100M
 auto_prepend_file =
 auto_append_file =
 default_mimetype = "text/html"
@@ -38,7 +39,7 @@ user_dir =
 enable_dl = Off
 cgi.fix_pathinfo=1
 file_uploads = On
-upload_max_filesize = 2M
+upload_max_filesize = 100M
 max_file_uploads = 20
 allow_url_fopen = On
 allow_url_include = Off
