--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,7 @@
 {
-    "/js/manifest.js": "/js/manifest.js",
-    "/js/vendor.js": "/js/vendor.js",
-    "/js/admin-app.js": "/js/admin-app.js",
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/manifest.js": "/js/manifest.js?id=7db827d654313dce4250",
+    "/js/vendor.js": "/js/vendor.js?id=b75926de43d95302526e",
+    "/js/admin-app.js": "/js/admin-app.js?id=a07559566b1c45802d9c",
+    "/js/app.js": "/js/app.js?id=7b4c72447b7bcf62e12c",
+    "/css/app.css": "/css/app.css?id=68a5785bdb6ac3edc7a1"
 }
