--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,17 @@
 version: '3.2'
 services:
   app:
-    image: democraciaenred/participes-app:testing
+    image: democraciaenred/sumen-app:testing
     environment:
-      APP_ENV: production
-      APP_NAME: Participes
+      APP_ENV: staging
+      APP_NAME: Sumen
       APP_DEBUG: 'true'
       APP_URL: http://localhost
+      SUMEN_DISTRICTS: 'false'
+      NOCAPTCHA_SECRET: 
+      NOCAPTCHA_SITEKEY: 
+      MAPBOX_API_KEY: 
+      MAPBOX_MAP_STYLE: 
       CONTAINER_ROLE: app
       DB_CONNECTION: mysql
       DB_HOST: mysql
@@ -14,15 +19,32 @@ services:
       DB_DATABASE: laravel
       DB_USERNAME: laravel
       DB_PASSWORD: laravel
+      QUEUE_CONNECTION: redis
+      REDIS_CLIENT: predis
       REDIS_HOST: redis
       REDIS_PORT: 6379
+      REDIS_QUEUE: mailer,default
+      MAIL_MAILER: smtp
+      MAIL_HOST: 
+      MAIL_PORT: 
+      MAIL_USERNAME:
+      MAIL_PASSWORD: 
+      MAIL_ENCRYPTION: 
+      MAIL_FROM_ADDRESS:
+      MAIL_FROM_NAME: 
     volumes:
       - public_dir:/var/www/html
       - ./docker/php/php.ini:/usr/local/etc/php/php.ini
       - ./docker/php/www.conf:/usr/local/etc/php-fpm.d/www.conf
     ports:
       - 9000:9000
+    depends_on:
+      - 'nginx'
+      - 'mysql'
+      - 'redis'
     restart: unless-stopped
+    networks:
+      - sumen
 
   nginx:
     image: nginx
@@ -39,16 +61,41 @@ services:
         source: ./docker/nginx/conf.d/app.conf
         target: /etc/nginx/conf.d/default.conf
     restart: unless-stopped
+    networks:
+      - sumen
 
   queue:
-    image: democraciaenred/participes-app:testing
+    image: democraciaenred/sumen-app:testing
+    depends_on:
+      - 'app'
     environment:
       APP_ENV: local
+      APP_NAME: Sumen
+      APP_DEBUG: 'true'
+      APP_URL: http://localhost
+      SUMEN_DISTRICTS: 'false'
       CONTAINER_ROLE: queue
-      CACHE_DRIVER: redis
-      SESSION_DRIVER: redis
-      QUEUE_DRIVER: redis
+      DB_CONNECTION: mysql
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_DATABASE: laravel
+      DB_USERNAME: laravel
+      DB_PASSWORD: laravel
+      QUEUE_CONNECTION: redis
+      REDIS_CLIENT: predis
       REDIS_HOST: redis
+      REDIS_PORT: 6379
+      REDIS_QUEUE: mailer,default
+      MAIL_MAILER: smtp
+      MAIL_HOST: 
+      MAIL_PORT: 
+      MAIL_USERNAME: 
+      MAIL_PASSWORD: 
+      MAIL_ENCRYPTION: 
+      MAIL_FROM_ADDRESS: 
+      MAIL_FROM_NAME: 
+    networks:
+      - sumen
 
   redis:
     image: redis
@@ -56,6 +103,8 @@ services:
       - 6379:6379
     volumes:
       - redis:/data
+    networks:
+      - sumen
 
   mysql:
     image: mysql:5.7
@@ -65,7 +114,13 @@ services:
       MYSQL_USER: laravel
       MYSQL_PASSWORD: laravel
     restart: unless-stopped
+    networks:
+      - sumen
 
 volumes:
   public_dir:
   redis:
+
+networks:
+  sumen:
+    driver: bridge
