New env DB_SPECIFIED_KEY_FIX=false // Added fix for violation: 1071 Specified key was too long; max key length is 767 bytes

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
+DB_SPECIFIED_KEY_FIX=false
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
