Agregado google analytics (Mas info en README + ver .env.example)

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ SUMEN_DISTRICTS=false
 
 NOCAPTCHA_SECRET=
 NOCAPTCHA_SITEKEY=
+ANALYTICS_PROVIDER=NoAnalytics
+#ANALYTICS_PROVIDER=GoogleAnalytics
+#ANALYTICS_TRACKING_ID=your-tracking-id
 
 MAPBOX_API_KEY=
 MAPBOX_MAP_STYLE=
